freeform-docs/v1/README.md
---
title: Craft Freeform 1.x - Overview
prev: false
next: false
---

<meta property="og:image" content="https://docs.solspace.com/extras/social/craft/freeform/freeform.png" />

::: version /craft/freeform/v5/
Freeform
:::

<div id="pr-heading">
    <img src="https://docs.solspace.com/extras/icons/products/freeform-icon.png" alt="Freeform" class="pr-image">
    <span class="pr-name">Freeform</span>
    <span class="pr-category">for Craft</span>
    <div class="pr-v-wrapper">
        <div class="pr-v">
            <span class="pr-v-v">1.x</span>
            <span class="pr-v-type pr-retired">Retired</span>
            <span class="pr-v-arrow arrow down"></span>
        </div>
        <ul class="pr-v-list">
            <li><a href="/craft/freeform/v5/">5.x<span class="pr-v-type pr-latest">✓ Latest</span></a></li>
            <li><a href="/craft/freeform/v4/">4.x</a></li>
            <li><a href="/craft/freeform/v3/">3.x<span class="pr-v-type pr-retired">Retired</span></a></li>
            <li><a href="/craft/freeform/v2/">2.x<span class="pr-v-type pr-retired">Retired</span></a></li>
            <li><a href="/craft/freeform/v1/">1.x<span class="pr-v-type pr-retired">Retired</span></a></li>
        </ul>
    </div>
    <div class="pr-buy">
        <a href="https://plugins.craftcms.com/freeform" class="button button-blue"><span class="external-url">Plugin Store</span></a>
    </div>
</div>

<div class="hero">

<img src="../../../images/logos/freeform.png" class="hero-logo no-shadow" alt="Freeform 1 for Craft CMS">
<h2>Ready for wherever your project takes you.</h2>

Freeform is a versatile form-building tool that can adjust to the evolving needs of your project, whether it's a simple or complex form. It offers effective spam protection and an easy-to-use form builder with powerful field types and built-in convenience features that your users will love. Freeform integrates seamlessly with popular CRMs, email marketing services, Craft elements, and more. It includes fully customizable ready-to-go templates and also offers headless support.

<div class="hero-buttons">
    <a href="#key-features" class="button button-lg">
        <span class="arrow-down">Feature Tour</span>
    </a>
    <a href="#compare" class="button button-lg">
        <span class="arrow-down">Pricing</span>
    </a>
    <a href="./getting-started/" class="button button-lg">
        <span>Getting Started</span>
    </a>
    <small>
        <a href="https://plugins.craftcms.com/freeform">INSTALL A FREE, UNLIMITED TRIAL TODAY!</a>
    </small>
</div>

</div>

<h1>The most reliable, intuitive and powerful form builder for Craft.</h1>
<p>Freeform is the most reliable, intuitive and powerful form building plugin for Craft. Everything is at your fingertips in our elegant form builder. It gives you full control to create simple or complex multi-page forms, as well as connect your forms to many popular API integrations. Templating is easy and highly customizable. Our ready-to-go templates and features will have you ready in minutes! No other form plugin even comes close to comparing! Stop wasting valuable development hours wrestling with and tuning the Craft Contact Form or other alternatives. You can trust Freeform (and the team behind it) to deliver the quality and support you expect and deserve.</p>

[Key Features](#key-features) &nbsp;&nbsp;|&nbsp;&nbsp; [Compare](#compare) &nbsp;&nbsp;|&nbsp;&nbsp; [Testimonials](#testimonials) &nbsp;&nbsp;|&nbsp;&nbsp; [Why Freeform?](#why-freeform) &nbsp;&nbsp;|&nbsp;&nbsp; [FAQ](#faq)


[[toc]]



## Key Features

Freeform is loaded with features that have been battle-tested over the years from thousands of sites using them.

<div class="menu-grid">
    <a href="./overview/forms-composer.html" class="menu-box">
        <img src="./images/promo/creativity.png" alt="Intuitive Form Building">
        <div class="menu-grid-text">
            <h3>Intuitive Form Building</h3>
            <p>Freeform’s form builder is a fun and intuitive drag-and-drop interface, like no other. Effortlessly create simple or complex multi-column forms.</p>
        </div>
    </a>
    <a href="./overview/fields-field-types.html" class="menu-box">
        <img src="./images/promo/list.png" alt="Powerful Fieldtypes">
        <div class="menu-grid-text">
            <h3>Powerful Fieldtypes</h3>
            <p>Freeform is packed with many powerful fieldtypes that handle the hard work for you, including Date & Time, Phone, Rating, Regex and more.</p>
        </div>
    </a>
    <a href="./overview/multi-page-forms.html" class="menu-box">
        <img src="./images/promo/folder.png" alt="Multi-Page Forms">
        <div class="menu-grid-text">
            <h3>Multi-Page Forms</h3>
            <p>Freeform is the only Craft form plugin that allows you to have true multi-page forms. Build and rearrange fields and pages inside the form builder.</p>
        </div>
    </a>
    <a href="./overview/spam-protection.html" class="menu-box">
        <img src="./images/promo/locked.png" alt="Spam Protection">
        <div class="menu-grid-text">
            <h3>Spam Protection</h3>
            <p>Freeform includes its own robust spam control features including a very effective javascript Honeypot and Google reCAPTCHA v2 Checkbox.</p>
        </div>
    </a>
    <a href="./overview/email-notifications.html" class="menu-box">
        <img src="./images/promo/letters.png" alt="Email Notifications">
        <div class="menu-grid-text">
            <h3>Email Notifications</h3>
            <p>Every conceivable option for sending fully customizable email notifications! Have as many templates as you like, and use different ones for every type.</p>
        </div>
    </a>
    <a href="./overview/formatting-templates.html" class="menu-box">
        <img src="./images/promo/code.png" alt="Flexible Templating">
        <div class="menu-grid-text">
            <h3>Flexible Templating</h3>
            <p>Templating is easy and highly customizable for even complex forms! Ready-to-go demo templates and features will have you ready in minutes!</p>
        </div>
    </a>
    <a href="./overview/exporting.html" class="menu-box">
        <img src="./images/promo/file.png" alt="Export Submissions">
        <div class="menu-grid-text">
            <h3>Export Submissions</h3>
            <p>Quickly export submission data or create pre-defined Export Profile reports for your clients to run. Export data as CSV, Text, XML or JSON.</p>
        </div>
    </a>
    <a href="./api-integrations/crm/" class="menu-box">
        <img src="./images/promo/api.png" alt="API Integrations">
        <div class="menu-grid-text">
            <h3>API Integrations</h3>
            <p>Connect your forms to many popular CRM's and Mailing List service integrations! Map your Freeform fields to integration fields right inside the CP.</p>
        </div>
    </a>
    <a href="./overview/fieldtype.html" class="menu-box">
        <img src="./images/promo/push-pin.png" alt="Element Fieldtype">
        <div class="menu-grid-text">
            <h3>Element Fieldtype</h3>
            <p>Using the Freeform element fieldtypes, you can assign/relate any forms and submissions to other element types such as Craft Entries.</p>
        </div>
    </a>
    <a href="./overview/widgets.html" class="menu-box">
        <img src="./images/promo/dashboard.png" alt="Dashboard Widgets">
        <div class="menu-grid-text">
            <h3>Dashboard Widgets</h3>
            <p>Add beautiful widgets to the Craft Dashboard! Choose from linear charts, radial charts, field value charts and recent submissions widgets.</p>
        </div>
    </a>
    <a href="./setup/gdpr-compliance.html" class="menu-box">
        <img src="./images/promo/gdpr.png" alt="GDPR Compliant">
        <div class="menu-grid-text">
            <h3>GDPR Compliant</h3>
            <p>Freeform contains thorough documentation and a variety of configuration options you can choose from to easily make your forms GDPR compliant.</p>
        </div>
    </a>
    <a href="./setup/installing-updating.html#permissions" class="menu-box">
        <img src="./images/promo/controls.png" alt="User Group Permissions">
        <div class="menu-grid-text">
            <h3>User Group Permissions</h3>
            <p>Freeform includes a very granular set of user group and user permission controls that allow you to limit access to sections and forms and submissions.</p>
        </div>
    </a>
    <a href="./setup/translating.html" class="menu-box">
        <img src="./images/promo/worldwide.png" alt="Translatable">
        <div class="menu-grid-text">
            <h3>Translatable</h3>
            <p>All of the Freeform control panel is translatable. Front end template static translating of fields and success/error messages is also available.</p>
        </div>
    </a>
    <a href="./developer/events-and-hooks.html" class="menu-box">
        <img src="./images/promo/socket.png" alt="Developer-friendly">
        <div class="menu-grid-text">
            <h3>Developer-friendly</h3>
            <p>Freeform has a wide variety of developer events and is very customizable, allowing you to easily extend Freeform for your needs!</p>
        </div>
    </a>
</div>


## Integrations

<div class="feature-grid feature-api-grid">
    <div>
        <img src="../../../images/api/mailchimp.png" alt="Mailchimp">
    </div>
    <div>
        <img src="../../../images/api/hubspot.png" alt="HubSpot">
    </div>
    <div>
        <img src="../../../images/api/salesforce.png" alt="Salesforce">
    </div>
    <div>
        <img src="../../../images/api/constant-contact.png" alt="Constant Contact">
    </div>
    <div>
        <img src="../../../images/api/campaign-monitor.png" alt="Campaign Monitor">
    </div>
    <div>
        <img src="../../../images/api/pipedrive.png" alt="Pipedrive">
    </div>
    <div>
        <img src="../../../images/api/sharpspring.png" alt="SharpSpring">
    </div>
    <div>
        <img src="../../../images/api/recaptcha.png" alt="reCAPTCHA">
    </div>
    <div>
        <img src="../../../images/api/bootstrap.png" alt="Bootstrap">
    </div>
</div>


## Compare

Check out the chart below to help you choose the right version for your needs.

| <h3 class="no-margin">Pricing & Support</h3> | <h1 class="no-margin">Lite</h1> | <h1 class="orange no-margin">Pro</h1> |
| :--- | :---: | :---: |
| Price | $99 | <span class="orange">$149</span> |
| Number of sites (including dev/staging) | 1 site | <span class="orange">1 site</span> |
| Support Options | Helpdesk | <span class="orange">Helpdesk</span> |
| Support Level<br /><small>_† Typical support ticket first response time within this timeframe or sooner, based on business days._</small> | 2 days† | <span class="orange">2 days†</span> |
| Support term | 1 year | <span class="orange">1 year</span> |
| Updates available | 1 year | <span class="orange">1 year</span> |
| Renewal (optional) | $49/yr | <span class="orange">$79/yr</span> |
| Compatibility | Craft&nbsp;2.6-2.7 | <span class="orange">Craft 2.6-2.7</span> |
| Refund policy | 30 days | <span class="orange">30 days</span> |
| <h3 class="no-margin">Feature</h3> |  |  |
| Intuitive drag and drop interface | ![Yes](./images/promo/check-circle-gray.svg) | ![Yes](./images/promo/check-circle-orange.svg) |
| Popular framework examples | ![Yes](./images/promo/check-circle-gray.svg) | ![Yes](./images/promo/check-circle-orange.svg) |
| Automated templating | ![Yes](./images/promo/check-circle-gray.svg) | ![Yes](./images/promo/check-circle-orange.svg) |
| Multi-page forms | ![Yes](./images/promo/check-circle-gray.svg) | ![Yes](./images/promo/check-circle-orange.svg) |
| Conditional Rules logic | ![No](./images/promo/circle-gray.svg) | ![No](./images/promo/circle-gray.svg) <br /><small>(Freeform 2+)</small> |
| Store, view and edit submissions | ![Yes](./images/promo/check-circle-gray.svg) | ![Yes](./images/promo/check-circle-orange.svg) |
| GDPR compliant | ![Yes](./images/promo/check-circle-gray.svg) | ![Yes](./images/promo/check-circle-orange.svg) |
| Automatically purge submission data | ![No](./images/promo/circle-gray.svg) <br /><small>(Freeform 2+)</small> | ![No](./images/promo/circle-gray.svg) <br /><small>(Freeform 2+)</small> |
| Variety of email notification options | ![Yes](./images/promo/check-circle-gray.svg) | ![Yes](./images/promo/check-circle-orange.svg) |
| Exporting of data | CSV | <span class="orange">Text, CSV, XML, JSON</span> |
| Export profiles (pre-configured) | ![No](./images/promo/circle-gray.svg) | ![Yes](./images/promo/check-circle-orange.svg) |
| Attach forms to entries | ![Yes](./images/promo/check-circle-gray.svg) | ![Yes](./images/promo/check-circle-orange.svg) |
| Unlimited custom fields | ![Yes](./images/promo/check-circle-gray.svg) | ![Yes](./images/promo/check-circle-orange.svg) |
| Custom statuses | ![Yes](./images/promo/check-circle-gray.svg) | ![Yes](./images/promo/check-circle-orange.svg) |
| Basic field types (text, textarea, email, number, checkbox, checkbox group, radio buttons, file upload, hidden, select, dynamic recipients, HTML block, confirm) | ![Yes](./images/promo/check-circle-gray.svg) | ![Yes](./images/promo/check-circle-orange.svg) |
| Premium field types (date & time, phone, rating, regex, website) | ![No](./images/promo/circle-gray.svg) | ![Yes](./images/promo/check-circle-orange.svg) |
| Populate fields with Element data or Predefined options | ![No](./images/promo/circle-gray.svg) <br /><small>(Freeform 2+)</small> | ![No](./images/promo/circle-gray.svg) <br /><small>(Freeform 2+)</small> |
| Map submission data to Craft Elements | ![No](./images/promo/circle-gray.svg) <br /><small>(Freeform 2+)</small> | ![No](./images/promo/circle-gray.svg) <br /><small>(Freeform 2+)</small> |
| Formatting templates as HTML files | ![Yes](./images/promo/check-circle-gray.svg) | ![Yes](./images/promo/check-circle-orange.svg) |
| Email notification templates as HTML files | ![Yes](./images/promo/check-circle-gray.svg) | ![Yes](./images/promo/check-circle-orange.svg) |
| Built-in spam protection | ![Yes](./images/promo/check-circle-gray.svg) | ![Yes](./images/promo/check-circle-orange.svg) |
| Spam folder | ![No](./images/promo/circle-gray.svg) <br /><small>(Freeform 2+)</small> | ![No](./images/promo/circle-gray.svg) <br /><small>(Freeform 2+)</small> |
| Spam blocking (keywords, email, IP address) | ![No](./images/promo/circle-gray.svg) <br /><small>(Freeform 2+)</small> | ![No](./images/promo/circle-gray.svg) <br /><small>(Freeform 2+)</small> |
| reCAPTCHA v2 Checkbox | ![No](./images/promo/circle-gray.svg) | ![Yes](./images/promo/check-circle-orange.svg) |
| Mailing List API integrations | ![No](./images/promo/circle-gray.svg) | <span class="orange">MailChimp, Campaign Monitor, Constant Contact</span><br /><small>(ActiveCampaign, dotmailer and Craft Campaign plugin in Freeform 2+)</small> |
| CRM API integrations | ![No](./images/promo/circle-gray.svg) | <span class="orange">Salesforce Lead, HubSpot, Pipedrive, SharpSpring</span><br /><small>(Salesforce Opportunities and Insightly in Freeform 2+)</small> |
| Accept Payments through Stripe | ![No](./images/promo/circle-gray.svg) <br /><small>(Freeform 2+)</small> | ![No](./images/promo/circle-gray.svg) <br /><small>(Freeform 2+)</small> |
| Dashboard widgets | ![No](./images/promo/circle-gray.svg) | ![Yes](./images/promo/check-circle-orange.svg) |
| Translatable | ![Yes](./images/promo/check-circle-gray.svg) | ![Yes](./images/promo/check-circle-orange.svg) |
| | <div class="extra-padding"><a href="./buy.html" class="button button-sm">How&nbsp;to&nbsp;Buy</a></div> | <div class="extra-padding"><a href="./buy.html" class="button button-sm">How&nbsp;to&nbsp;Buy</a></div> |

::: danger
As of May 24, 2019, **purchasing of legacy software for Craft 2.x has changed**. [Click here to see changes to options](./buy.md).
:::

<div class="content-block">

## Testimonials

> "Freeform Pro is really head and shoulders above any other form builder I've used."

> "Having reliable form processing is critical to making my clients' websites work. Using Freeform gives me the power to create flexible forms with less hassle than creating them manually."

> "It's a fantastic plugin for Craft which we use on nearly all of our project websites."

> "Freeform tends to add features before I realize I need them!"

> "I love Freeform! Been using it on sites for a long time and I like how full-featured it is."

> "Love this product... one of the best things built for Craft in my opinion."

> "Awesome plugin! Saved a ton of time for me. Worth the money spent."

> "Freeform has allowed me to do things that were once impossible for a project I was working on. It's easy to use and incredibly powerful!"

_*(Testimonials collected from an anonymous Freeform product feedback survey and through private support tickets)_

</div>
<div class="content-block">

## Why Freeform?
Rest assured that Freeform and the team behind it are committed to providing you with the level of quality and support that you expect and deserve.

<div class="feature-grid">
    <div>
        <img src="../../../images/icons/support.png" alt="Top Notch Support">
        <div class="feature-grid-text">
            <h3>Top Notch Support</h3>
            <p>Our commitment to providing top-notch customer support is well-known in the Craft CMS community. We always aim to deliver the best and most dependable assistance to our valued customers.</p>
            <p><a href="./support/" class="button button-blue"><span>See support options</span></a></p>
        </div>
    </div>
    <div>
        <img src="../../../images/icons/hourglass.png" alt="20+ Years Experience">
        <div class="feature-grid-text">
            <h3>20+ Years Experience</h3>
            <p>For over 20 years, Solspace has been creating, maintaining, and providing support for software to more than 20,000 customers. In total, over 400,000 plugins have been sold or downloaded for free.</p>
            <p><a href="https://solspace.com" class="button button-blue"><span>About Solspace</span></a></p>
        </div>
    </div>
    <div>
        <img src="../../../images/icons/development.png" alt="Active Development">
        <div class="feature-grid-text">
            <h3>Active Development</h3>
            <p>Craft CMS users widely prefer Freeform, a plugin that boasts an impressive track record of continuous development, including numerous feature upgrades, enhancements, and bug fixes.</p>
            <p><a href="./setup/changelog" class="button"><span>View the changelog</span></a></p>
        </div>
    </div>
</div>

</div>
<div class="content-block">

## FAQ
Frequently asked questions about buying Freeform.

### How many sites can I use my license on?
Each purchase of Freeform allows usage for 1 website, with the exception of development and staging versions of that site.

### If I buy Lite now, can I switch to Pro later?
Yes! The Pro version just adds onto the functionality available with Lite. To make the switch, you just need to purchase the Freeform Pro addon plugin in the Craft Plugin Store (for the difference in price).

### Do you offer discounts to non-profits?
Yes, we offer a discount to non-profits for 20% off the regular price upon proof of non-profit status. Please contact us for more information about this.

### Can I try before I buy?
In the Craft Plugin Store you can install a trial of Freeform to try it out!

### Does the Trial version limit features?
The trial versions of Solspace software are not limited in any way. However, if you attempt to use a trial version on a production site, Craft will display a red banner at the top of your control panel alerting you to purchase a license.

</div>